implementing positioning card in field